--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,27 @@ node_modules/
 *.sql
 *.tar.gz
 *.zip
+.distignore
+.editorconfig
+.git
+.gitignore
+.gitlab-ci.yml
+.travis.yml
+.DS_Store
+Thumbs.db
+behat.yml
+bin
+circle.yml
+composer.json
+composer.lock
+Gruntfile.js
+package.json
+phpunit.xml
+phpunit.xml.dist
+multisite.xml
+multisite.xml.dist
+phpcs.xml
+phpcs.xml.dist
+wp-cli.local.yml
+tests
+vendor
